# ishi

./: .gitignore  MANIFEST.in  README.md  setup.cfg
ishi/: __init__.py  ishi.py  non_volition_head_repnames.txt
ishi/rules/: non_volition_adverb_repnames.txt  non_volition_head_repnames.txt  non_volition_semantic_labels.txt  non_volition_types.txt  non_volition_verbal_suffix_repnames.txt  non_volition_verbal_suffix_semantic_labels.txt  non_volition_voices.txt  valid_adjective_predicate_suffix_repnames.txt  valid_nominative_semantic_markers.txt  valid_nominative_strings.txt  volition_adverb_repnames.txt  volition_modalities.txt  volition_voices.txt
tests/: test_cases.py  test_ishi.py
