[metadata]
name = ishi
version = file: ishi/VERSION
author = Hirokazu Kiyomaru
author_email = kiyomaru@nlp.ist.i.kyoto-u.ac.jp
description = A volition classifier for Japanese
long_description = file: README.md
long_description_content_type = text/markdown
keywords = NLP, Japanese
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir =
  =ishi
packages = find:
install_requires =
  pyknp
  mojimoji
python_requires = >=3.6

[options.extras_require]
testing =
  pytest

[options.packages.find]
where = src
exclude =
    tests
